--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 // ===== 設定 =====
 const CONFIG = {
   DEPLOY_URL: "https://script.google.com/macros/s/AKfycbwgjnuankF8LSPEFCDNaJ7FgacGlo9pwER7r5rSm-YRx-de776UhYdcL3Vl5RcHfTGq/exec", // ←GAS URL
-  KEY: "KEY_2025_水検", // ←GASの簡易キーと一致させる
+  KEY: "KEY_2025_SUIKEN", // ←GASの簡易キーと一致させる
   OPERATORS: [
     {key:'matsukawa', label:'松川'},
     {key:'chiba', label:'千葉'},
