--- a/index.html
+++ b/index.html
@@ -5,52 +5,58 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>水没検査 入力パネル（最終版）</title>
 <style>
-  :root{--bg:#0f172a;--card:#111827;--muted:#94a3b8;--ok:#16a34a;--warn:#f59e0b;--err:#ef4444;--ink:#e5e7eb;--accent:#22d3ee}
-  *{box-sizing:border-box}
-  html,body{height:100%}
-  body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Noto Sans JP",sans-serif;background:linear-gradient(160deg,#0b1222,#0f172a 40%,#0c1226);color:var(--ink)}
-  .wrap{max-width:1100px;margin:0 auto;padding:20px}
-  header{display:flex;gap:16px;align-items:center;flex-wrap:wrap;margin-bottom:16px}
-  header h1{font-size:20px;margin:0 8px 0 0;font-weight:800;letter-spacing:.02em}
-  .card{background:var(--card);border:1px solid #1f2937;border-radius:16px;padding:14px;box-shadow:0 10px 24px rgba(0,0,0,.25)}
-  .section-title{font-weight:800;margin:6px 2px 10px;color:#cbd5e1}
-  .row{display:flex;gap:10px;flex-wrap:wrap}
-  .grid{display:grid;grid-template-columns:repeat(4,minmax(150px,1fr));gap:12px}
-  @media (max-width:900px){.grid{grid-template-columns:repeat(2,minmax(150px,1fr))}}
-  .btn{border:1px solid #1f2937;background:#0b1222;color:var(--ink);border-radius:12px;padding:12px 16px;font-weight:800;cursor:pointer;letter-spacing:.02em}
-  .btn.big{height:80px;border-radius:14px;background:linear-gradient(180deg,#0f1b33,#0a1326);box-shadow:inset 0 0 0 1px rgba(255,255,255,.04),0 8px 20px rgba(0,0,0,.2)}
-  .btn:disabled{opacity:.5;cursor:not-allowed}
-  .btn.active{background:#12223f;border-color:#30548d;box-shadow:inset 0 0 0 1px rgba(34,211,238,.25),0 0 0 2px rgba(34,211,238,.15)}
-  .btn.ok{background:#052e1a;border-color:#14532d}
-  .btn.err{background:#3b0a0a;border-color:#7f1d1d}
-  .pill{display:inline-flex;align-items:center;gap:8px;background:#0b1222;border:1px solid #233046;color:var(--ink);padding:8px 10px;border-radius:999px}
-  .pill input,.pill select{background:transparent;border:none;color:var(--ink);outline:none}
-  .chips{display:flex;flex-wrap:wrap;gap:8px}
-  .chip{border:1px solid #233046;border-radius:999px;padding:10px 14px;background:#0b1222;color:var(--ink);cursor:pointer;font-weight:700}
-  .chip.active{border-color:#2aa6c8;background:#0e1a2c}
-  .muted{color:var(--muted)}
-  .log{margin-top:12px;font-size:13px;color:var(--muted);max-height:160px;overflow:auto;white-space:pre-wrap}
-  .toast{position:fixed;inset:auto 16px 16px auto;background:rgba(2,6,23,.9);border:1px solid #1f2937;color:var(--ink);padding:12px 14px;border-radius:12px;box-shadow:0 10px 22px rgba(0,0,0,.35);opacity:0;transform:translateY(8px);transition:.2s}
-  .toast.show{opacity:1;transform:translateY(0)}
-  input[type="text"], input[type="number"], input[type="search"]{background:#0b1222;border:1px solid #233046;color:#fff;border-radius:10px;padding:10px 12px}
-  .divider{height:12px}
-  .hidden{display:none}
-  .kbd{font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;background:#0b1222;border:1px solid #233046;border-radius:6px;padding:2px 6px}
+:root{
+--bg:#0f172a;--card:#111827;--muted:#94a3b8;--ok:#16a34a;--warn:#f59e0b;--err:#ef4444;--ink:#e5e7eb;--accent:#22d3ee;
+--font-size-base:20px;
+--font-size-large:28px;
+--btn-padding:20px 24px;
+}
+*{box-sizing:border-box}
+html,body{height:100%}
+body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Noto Sans JP",sans-serif;background:linear-gradient(160deg,#0b1222,#0f172a 40%,#0c1226);color:var(--ink);font-size:var(--font-size-base)}
+.wrap{max-width:1100px;margin:0 auto;padding:20px}
+header{display:flex;gap:16px;align-items:center;flex-wrap:wrap;margin-bottom:16px}
+header h1{font-size:var(--font-size-large);margin:0 8px 0 0;font-weight:800;letter-spacing:.02em}
+.card{background:var(--card);border:1px solid #1f2937;border-radius:16px;padding:18px;box-shadow:0 10px 24px rgba(0,0,0,.25)}
+.section-title{font-weight:800;margin:8px 2px 12px;color:#cbd5e1;font-size:var(--font-size-base)}
+.row{display:flex;gap:14px;flex-wrap:wrap}
+.grid{display:grid;grid-template-columns:repeat(4,minmax(150px,1fr));gap:14px}
+@media (max-width:900px){.grid{grid-template-columns:repeat(2,minmax(150px,1fr))}}
+.btn{border:1px solid #1f2937;background:#0b1222;color:var(--ink);border-radius:14px;padding:var(--btn-padding);font-weight:800;cursor:pointer;letter-spacing:.02em;font-size:var(--font-size-base)}
+.btn.big{height:100px;font-size:var(--font-size-large);border-radius:16px;background:linear-gradient(180deg,#0f1b33,#0a1326);box-shadow:inset 0 0 0 1px rgba(255,255,255,.04),0 8px 20px rgba(0,0,0,.2)}
+.btn:disabled{opacity:.5;cursor:not-allowed}
+.btn.active{background:#12223f;border-color:#30548d;box-shadow:inset 0 0 0 1px rgba(34,211,238,.25),0 0 0 2px rgba(34,211,238,.15)}
+.btn.ok{background:#052e1a;border-color:#14532d}
+.btn.err{background:#3b0a0a;border-color:#7f1d1d}
+.pill{display:inline-flex;align-items:center;gap:8px;background:#0b1222;border:1px solid #233046;color:var(--ink);padding:12px 14px;border-radius:999px;font-size:var(--font-size-base)}
+.pill input,.pill select{background:transparent;border:none;color:var(--ink);outline:none;font-size:var(--font-size-base)}
+.chips{display:flex;flex-wrap:wrap;gap:10px}
+.chip{border:1px solid #233046;border-radius:999px;padding:14px 18px;background:#0b1222;color:var(--ink);cursor:pointer;font-weight:700;font-size:var(--font-size-base)}
+.chip.active{border-color:#2aa6c8;background:#0e1a2c}
+.muted{color:var(--muted);font-size:18px}
+.log{margin-top:14px;font-size:16px;color:var(--muted);max-height:180px;overflow:auto;white-space:pre-wrap}
+.toast{position:fixed;inset:auto 16px 16px auto;background:rgba(2,6,23,.9);border:1px solid #1f2937;color:var(--ink);padding:14px 16px;border-radius:14px;box-shadow:0 10px 22px rgba(0,0,0,.35);opacity:0;transform:translateY(8px);transition:.2s;font-size:var(--font-size-base)}
+.toast.show{opacity:1;transform:translateY(0)}
+input[type="text"], input[type="number"], input[type="search"]{background:#0b1222;border:1px solid #233046;color:#fff;border-radius:12px;padding:12px 14px;font-size:var(--font-size-base)}
+.divider{height:14px}
+.hidden{display:none}
+.kbd{font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;background:#0b1222;border:1px solid #233046;border-radius:6px;padding:4px 8px;font-size:16px}
 </style>
 </head>
 <body>
 <div class="wrap">
-  <header>
-    <h1>水没検査 入力パネル</h1>
-    <span class="muted">（検査者 → 種別 → 合否 → 分岐）</span>
-  </header>
+<header>
+<h1>水没検査 入力パネル</h1>
+<span class="muted">（検査者 → 種別 → 合否 → 分岐）</span>
+</header>
 
-  <!-- 検査者 -->
-  <section class="card" aria-label="検査者">
-    <div class="section-title">検査者</div>
-    <div class="row" id="operatorBar"></div>
-    <div class="muted" style="margin-top:6px">※ 作業者が変わったら別のボタンを押して切替。構成の変更は <span class="kbd">CONFIG.OPERATORS</span> を編集。</div>
-  </section>
+
+<!-- 検査者 -->
+<section class="card" aria-label="検査者">
+<div class="section-title">検査者</div>
+<div class="row" id="operatorBar"></div>
+<div class="muted" style="margin-top:6px">※ 作業者が変わったら別のボタンを押して切替。構成の変更は <span class="kbd">CONFIG.OPERATORS</span> を編集。</div>
+</section>
 
   <div class="divider"></div>
 
@@ -143,12 +149,15 @@
     <div class="grid" id="partGrid2"></div>
     <div class="section-title" style="margin-top:10px">不良種別（必須）</div>
     <div class="chips" id="defectChips2"></div>
-    <div class="row" style="margin-top:12px">
-      <button class="btn" id="btnAddLoc">＋ 箇所を追加</button>
-      <button class="btn ok" id="btnSendPre2">送信</button>
-    </div>
-    <div class="muted" style="margin-top:8px">※ 追加を押すと 2箇所目, 3箇所目… を順に登録できます（送信まで編集保持）。</div>
-    <div class="row" id="locPreview" style="margin-top:8px"></div>
+<div class="row" style="margin-top:12px">
+  <button class="btn" id="btnAddLoc">＋ 箇所を追加</button>
+</div>
+<div class="muted" style="margin-top:8px">※ 追加を押すと …</div>
+<div class="row" id="locPreview" style="margin-top:8px"></div>
+<div class="row" style="margin-top:10px">
+  <button class="btn ok" id="btnSendPre2" disabled>送信（保存した箇所を登録）</button>
+</div>
+
   </section>
 
   <div class="log" id="log"></div>
@@ -256,15 +265,15 @@ async function sendSimpleRecord(result){
   if(!debounceSendGuard()) return;
 
   const group_id = makeGroupId();
-  const params = {
-    k: CONFIG.KEY,
-    operator: state.operator,
-    mode: state.mode,
-    result,           // 'pass' | 'fail'
-    qty: '1',
-    group_id,         // ★ 追加：ユニークID
-    fail_seq: '1'     // ★ 追加：最初の行を「不合格1」扱い
-  };
+const params = {
+  k: CONFIG.KEY,
+  operator: state.operator,
+  mode: state.mode,
+  result,            // 'pass' | 'fail'
+  qty: '1',
+  group_id,
+  fail_seq: (result === 'pass' ? '0' : '1')   // ★ ここだけ変更
+};
 
   try{
     await send(params);
@@ -325,11 +334,23 @@ function addLoc(){
   $('#sideChips2').querySelectorAll('.chip').forEach(x=>x.classList.remove('active'));
   $('#partGrid2').querySelectorAll('.btn').forEach(x=>x.classList.remove('active'));
   $('#defectChips2').querySelectorAll('.chip').forEach(x=>x.classList.remove('active'));
+
+  const sendBtn = document.getElementById('btnSendPre2');
+if(sendBtn) sendBtn.disabled = state.pre2.locs.length===0;
+
 }
 function renderLocPreview(){
   const box = $('#locPreview'); box.innerHTML='';
-  state.pre2.locs.forEach((loc,i)=>{ const tag=document.createElement('span'); tag.className='chip active'; tag.textContent=`#${i+1} ${(loc.position||'')}/${(loc.side||'')} ${loc.part} / ${loc.defect}`; box.appendChild(tag); });
+  state.pre2.locs.forEach((loc,i)=>{
+    const tag=document.createElement('span');
+    tag.className='chip active';
+    tag.textContent=`#${i+1} ${(loc.position||'')}/${(loc.side||'')} ${loc.part} / ${loc.defect}`;
+    box.appendChild(tag);
+  });
+  const sendBtn = document.getElementById('btnSendPre2');
+  if(sendBtn) sendBtn.disabled = state.pre2.locs.length===0;   // ★ ここで切替
 }
+
 async function sendPre2(){
   if(!state.operator||!state.mode) return toast('検査者/種別を選択');
   if(!debounceSendGuard()) return;
@@ -378,6 +399,9 @@ function resetDetails(){
   state.pre2 = { inqNo:'', position:'', side:'', part:'', defect:'', locs:[] };
   $('#mfNo').value=''; $('#prodName').value='';
   $('#inqNo').value=''; $('#locPreview').innerHTML='';
+  const sendBtn = document.getElementById('btnSendPre2');
+if(sendBtn) sendBtn.disabled = true;
+
 }
 
 function handlePass(){ sendSimpleRecord('pass'); }
