--- a/index.html
+++ b/index.html
@@ -185,7 +185,32 @@ const CONFIG = {
     {key:'3', label:'3 初回修理品'},
     {key:'4', label:'4 初回修理品 裏検査'}
   ],
-  PARTS: ['ネック','肩','胸','脇','腕','肘','袖口','リスト','グローブ','腹','前股','後ろ股','腿','膝上','パッド','スネ','アンクル','ソックス部本体','ソックス部ジョイント','ファスナー部','背中','腰','尻','腿裏','膝裏','フクラハギ'],
+  PARTS: [PARTS: [
+  'アンクル',
+  '腕(ウデ)',
+  '肩(カタ)',
+  'グローブ',
+  '腰(コシ)',
+  '背中(セナカ)',
+  '袖口(ソデグチ)',
+  'ソックス部ジョイント',
+  'ソックス部本体',
+  'スネ(スネ)',
+  '尻(シリ)',
+  '胸(ムネ)',
+  'ネック(ネック)',
+  '膝上(ヒザウエ)',
+  '膝裏(ヒザウラ)',
+  '腹(ハラ)',
+  'パッド',
+  'ファスナー部',
+  'フクラハギ',
+  '股(マタ)',
+  '腿(モモ)',
+  '腿裏(モモウラ)',
+  '脇(ワキ)',
+  'リスト(リスト)'
+],
   DEFECTS: [
     {key:'pinhole', label:'ピンホール'},
     {key:'seam', label:'接合部'},
