--- a/index.html
+++ b/index.html
@@ -476,10 +476,10 @@ function clearPre2Selection() {
   state.pre2.side = ''; 
   state.pre2.part = ''; 
   state.pre2.defect = '';
-  $('#posChips2').querySelectorAll('.chip').forEach(x => x.classList.remove('active'));
-  $('#sideChips2').querySelectorAll('.chip').forEach(x => x.classList.remove('active'));
-  $('#partGrid2').querySelectorAll('.btn').forEach(x => x.classList.remove('active'));
-  $('#defectChips2').querySelectorAll('.chip').forEach(x => x.classList.remove('active'));
+  document.querySelectorAll('#posChips2 .chip').forEach(x => x.classList.remove('active'));
+  document.querySelectorAll('#sideChips2 .chip').forEach(x => x.classList.remove('active'));
+  document.querySelectorAll('#partGrid2 .btn').forEach(x => x.classList.remove('active'));
+  document.querySelectorAll('#defectChips2 .chip').forEach(x => x.classList.remove('active'));
 }
 
 function removeLoc(index) {
