--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </div>
 <script>
 const CONFIG = {
-  DEPLOY_URL: "YOUR_GAS_DEPLOY_URL_HERE",
+  DEPLOY_URL: "https://script.google.com/macros/s/AKfycbw1oNqiniXD9MUdca7uv2GAf-AoZs8Z5xEshgBiMbUtvJ5tq7LfHj4UG8w9gedh03uy/exec",
   KEY: "KEY_2025_SUIKEN",
   OPERATORS:[{key:'matsukawa',label:'松川'},{key:'chiba',label:'千葉'},{key:'takahashi',label:'高橋'}],
   MODES:[{key:'1',label:'1 出荷前製品'},{key:'2',label:'2 出荷前修理品'},{key:'3',label:'3 初回修理品'},{key:'4',label:'4 初回修理品 裏検査'}],
