--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ input[type="text"], input[type="number"], input[type="search"]{background:#0b122
 /* ==== 設定 ==== */
 const CONFIG = {
   // ★ここをあなたのGASデプロイURL(/exec)に差し替え
-  DEPLOY_URL: "YOUR_GAS_DEPLOY_URL_HERE",
+  DEPLOY_URL: "https://script.google.com/macros/s/AKfycbw1oNqiniXD9MUdca7uv2GAf-AoZs8Z5xEshgBiMbUtvJ5tq7LfHj4UG8w9gedh03uy/exec",
   // ★GAS側 CONF.KEY と一致させる
   KEY: "KEY_2025_SUIKEN",
 
