--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@ header h1{font-size:var(--font-size-large);margin:0 8px 0 0;font-weight:800;lett
 .btn{border:1px solid #1f2937;background:#0b1222;color:var(--ink);border-radius:14px;padding:var(--btn-padding);font-weight:800;cursor:pointer;letter-spacing:.02em;font-size:var(--font-size-base)}
 .btn.big{height:100px;font-size:var(--font-size-large);border-radius:16px;background:linear-gradient(180deg,#0f1b33,#0a1326);box-shadow:inset 0 0 0 1px rgba(255,255,255,.04),0 8px 20px rgba(0,0,0,.2)}
 .btn:disabled{opacity:.5;cursor:not-allowed}
-.btn.active{background:#12223f;border-color:#30548d;box-shadow:inset 0 0 0 1px rgba(34,211,238,.25),0 0 0 2px rgba(34,211,238,.15)}
+.btn.active {
+  background: #1e40af;  /* 濃い青 */
+  border-color: #60a5fa;
+}
+
 .btn.ok{background:#052e1a;border-color:#14532d}
 .btn.err{background:#3b0a0a;border-color:#7f1d1d}
 .pill{display:inline-flex;align-items:center;gap:8px;background:#0b1222;border:1px solid #233046;color:var(--ink);padding:12px 14px;border-radius:999px;font-size:var(--font-size-base)}
@@ -649,6 +653,19 @@ async function sendBranch() {
 
 // ===== 初期化 =====
 function init() {
+
+// 合格・不合格ボタンに押下時のエフェクトを追加
+['#btnPass', '#btnFail'].forEach(sel => {
+  const btn = document.querySelector(sel);
+  if (!btn) return;
+  btn.addEventListener('mousedown', () => btn.classList.add('active'));
+  btn.addEventListener('mouseup',   () => btn.classList.remove('active'));
+  btn.addEventListener('mouseleave',() => btn.classList.remove('active'));
+  // タッチ操作でも効くように
+  btn.addEventListener('touchstart', () => btn.classList.add('active'));
+  btn.addEventListener('touchend',   () => btn.classList.remove('active'));
+});
+
   try {
     buildOperators();
     buildModes();
