--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@ input[type="text"], input[type="number"], input[type="search"]{background:#0b122
 }
 .btn{ -webkit-tap-highlight-color: transparent; touch-action: manipulation; }
 
+/* タップ/クリック直後の一瞬のフィードバック */
+.btn:active {
+  background:#1e40af;          /* 目立つ色に調整可 */
+  border-color:#60a5fa;
+  transform: translateY(1px);  /* 押し込み感 */
+}
+/* iOS向けのタップ最適化（任意） */
+.btn { -webkit-tap-highlight-color: transparent; touch-action: manipulation; }
+
+
 </style>
 </head>
 <body>
@@ -663,6 +673,10 @@ function wirePressFeedback(selector){
   el.addEventListener('pointercancel',onUp);
   el.addEventListener('pointerleave', onUp);
 }
+
+// iOSで :active を有効にするおまじない（必須）
+document.addEventListener('touchstart', ()=>{}, {passive:true});
+
 
 
 // ===== 初期化 =====
